--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
     <h2>Basic grid</h2>
     <div class="grid">
-        <div class="col col-12 mobile-6 is-center-aligned">col-12 mobile-6</div>
+        <div class="col mobile-6 tablet-4 tablet-prepend-2 tablet-append-2 col-8 col-append-4 large-18">here</div>
+        <!-- <div class="col col-12 mobile-6 is-center-aligned">col-12 mobile-6</div>
 
         <div class="col col-4 mobile-6">col-4 mobile-6</div>
         <div class="col col-4 mobile-6">col-4 mobile-6</div>
@@ -20,7 +21,7 @@
         <div class="col col-3 mobile-3">col-3 mobile-3</div>
         <div class="col col-3 mobile-3">col-3 mobile-3</div>
         <div class="col col-3 mobile-3">col-3 mobile-3</div>
-        <div class="col col-3 mobile-3">col-3 mobile-3</div>
+        <div class="col col-3 mobile-3">col-3 mobile-3</div> -->
     </div>
 
     <h2>Basic grid, no grid padding</h2>
